Fixed Navbar z-index

--- a/styles/common/Global.css
+++ b/styles/common/Global.css
@@ -31,4 +31,5 @@
 /* Z Indices */
 :root {
     --z-index-navbar: 5;
+    --z-index-content: 1;
 }
